--- a/src/app/components/reusable_components/footer-component/footer-component.html
+++ b/src/app/components/reusable_components/footer-component/footer-component.html
@@ -1,1 +1,5 @@
-<p>footer-component works!</p>
+<mat-toolbar class="footer">
+    <div class="footer-content">
+        <div>© 2025 Dannoruwa-Anush</div>
+    </div>
+</mat-toolbar>
