--- a/src/app/components/reusable_components/layout-component/layout-component.html
+++ b/src/app/components/reusable_components/layout-component/layout-component.html
@@ -1,1 +1,9 @@
-<p>layout-component works!</p>
+<div class="layout-container">
+  <app-header-component></app-header-component>
+
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer-component></app-footer-component>
+</div>
