products page is drafted

--- a/src/app/components/page_components/products-component/products-component.html
+++ b/src/app/components/page_components/products-component/products-component.html
@@ -1,1 +1,93 @@
-<p>products-component works!</p>
+<!-- FILTER TOOLBAR -->
+<mat-toolbar color="primary" class="products-toolbar">
+
+  <div class="left-section">
+
+    <!-- Brands -->
+    <button mat-button [matMenuTriggerFor]="brandsMenu">
+      Brands <mat-icon>arrow_drop_down</mat-icon>
+    </button>
+
+    <mat-menu #brandsMenu="matMenu">
+      <button mat-menu-item (click)="onBrandSelect(undefined)">
+        All Brands
+      </button>
+      <button mat-menu-item *ngFor="let brand of brands" (click)="onBrandSelect(brand.brandID)">
+        {{ brand.brandName }}
+      </button>
+    </mat-menu>
+
+    <!-- Categories -->
+    <button mat-button [matMenuTriggerFor]="categoryMenu">
+      Category <mat-icon>arrow_drop_down</mat-icon>
+    </button>
+
+    <mat-menu #categoryMenu="matMenu">
+      <button mat-menu-item (click)="onCategorySelect(undefined)">
+        All Categories
+      </button>
+      <button mat-menu-item *ngFor="let category of categories" (click)="onCategorySelect(category.categoryID)">
+        {{ category.categoryName }}
+      </button>
+    </mat-menu>
+
+  </div>
+
+  <!-- Search -->
+  <div class="center-section">
+    <mat-form-field appearance="outline" class="search-field">
+      <mat-label>Search</mat-label>
+      <input matInput [(ngModel)]="searchText" (keyup.enter)="onSearch()" placeholder="Search products" />
+      <button mat-icon-button matSuffix (click)="onSearch()">
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+
+</mat-toolbar>
+
+<!-- PRODUCTS GRID -->
+<div class="products-grid">
+
+  <mat-card class="product-card" *ngFor="let item of electronicItems" [class.out-of-stock]="item.qoh === 0"
+    (click)="item.qoh > 0 && item.electronicItemID && openProduct(item.electronicItemID)">
+
+    <img mat-card-image [src]="getImageUrl(item)" alt="{{ item.electronicItemName }}" />
+
+    <mat-card-content>
+      <h3 class="product-name">{{ item.electronicItemName }}</h3>
+
+      <p class="product-price">
+        Rs. {{ item.price | number }}
+      </p>
+
+      <span class="stock-status" [class.in-stock]="item.qoh > 0" [class.out-stock]="item.qoh === 0">
+        {{ item.qoh > 0 ? 'Available' : 'Out of stock' }}
+      </span>
+    </mat-card-content>
+
+  </mat-card>
+
+</div>
+
+<!-- EMPTY STATE -->
+<div *ngIf="electronicItems.length === 0" class="empty-state">
+  No products found
+</div>
+
+<!-- PAGINATION -->
+<div class="pagination-container" *ngIf="totalCount > pageSize">
+
+  <button mat-stroked-button (click)="previousPage()" [disabled]="pageNumber === 1">
+    Previous
+  </button>
+
+  <span class="page-info">
+    Page {{ pageNumber }} of {{ totalPages }}
+  </span>
+
+  <button mat-stroked-button (click)="nextPage()" [disabled]="pageNumber === totalPages">
+    Next
+  </button>
+
+</div>
