component is modified with effect()

--- a/src/app/components/page_components/products-component/products-component.html
+++ b/src/app/components/page_components/products-component/products-component.html
@@ -13,11 +13,7 @@
         All Brands
       </button>
 
-      <button
-        mat-menu-item
-        *ngFor="let brand of brands()"
-        (click)="onBrandSelect(brand.brandID)"
-      >
+      <button mat-menu-item *ngFor="let brand of brands()" (click)="onBrandSelect(brand.brandID)">
         {{ brand.brandName }}
       </button>
     </mat-menu>
@@ -32,11 +28,7 @@
         All Categories
       </button>
 
-      <button
-        mat-menu-item
-        *ngFor="let category of categories()"
-        (click)="onCategorySelect(category.categoryID)"
-      >
+      <button mat-menu-item *ngFor="let category of categories()" (click)="onCategorySelect(category.categoryID)">
         {{ category.categoryName }}
       </button>
     </mat-menu>
@@ -48,14 +40,9 @@
     <mat-form-field appearance="outline" class="search-field">
       <mat-label>Search</mat-label>
 
-      <input
-        matInput
-        [(ngModel)]="searchText"
-        (keyup.enter)="onSearch()"
-        placeholder="Search products"
-      />
+      <input matInput [ngModel]="searchText()" (ngModelChange)="onSearch($event)" placeholder="Search products" />
 
-      <button mat-icon-button matSuffix (click)="onSearch()">
+      <button mat-icon-button matSuffix (click)="onSearch(searchText())">
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
@@ -66,18 +53,10 @@
 <!-- PRODUCTS GRID -->
 <div class="products-grid">
 
-  <mat-card
-    class="product-card"
-    *ngFor="let item of electronicItems()"
-    [class.out-of-stock]="item.qoh === 0"
-    (click)="item.qoh > 0 && item.electronicItemID && openProduct(item.electronicItemID)"
-  >
+  <mat-card class="product-card" *ngFor="let item of electronicItems()" [class.out-of-stock]="item.qoh === 0"
+    (click)="item.qoh > 0 && openProduct(item.electronicItemID!)">
 
-    <img
-      mat-card-image
-      [src]="getImageUrl(item)"
-      alt="{{ item.electronicItemName }}"
-    />
+    <img mat-card-image [src]="getImageUrl(item)" alt="{{ item.electronicItemName }}" />
 
     <mat-card-content>
       <h3 class="product-name">
@@ -88,11 +67,7 @@
         Rs. {{ item.price | number }}
       </p>
 
-      <span
-        class="stock-status"
-        [class.in-stock]="item.qoh > 0"
-        [class.out-stock]="item.qoh === 0"
-      >
+      <span class="stock-status" [class.in-stock]="item.qoh > 0" [class.out-stock]="item.qoh === 0">
         {{ item.qoh > 0 ? 'Available' : 'Out of stock' }}
       </span>
     </mat-card-content>
@@ -107,25 +82,17 @@
 </div>
 
 <!-- PAGINATION -->
-<div class="pagination-container" *ngIf="totalCount() > pageSize">
+<div class="pagination-container" *ngIf="totalCount() > pageSize()">
 
-  <button
-    mat-stroked-button
-    (click)="previousPage()"
-    [disabled]="pageNumber === 1"
-  >
+  <button mat-stroked-button (click)="previousPage()" [disabled]="pageNumber() === 1">
     Previous
   </button>
 
   <span class="page-info">
-    Page {{ pageNumber }} of {{ totalPages }}
+    Page {{ pageNumber() }} of {{ totalPages() }}
   </span>
 
-  <button
-    mat-stroked-button
-    (click)="nextPage()"
-    [disabled]="pageNumber === totalPages"
-  >
+  <button mat-stroked-button (click)="nextPage()" [disabled]="pageNumber() === totalPages()">
     Next
   </button>
 
