--- a/src/app/components/reusable_components/header-component/header-component.html
+++ b/src/app/components/reusable_components/header-component/header-component.html
@@ -25,7 +25,8 @@
   <div class="toolbar-right">
 
     <!-- Cart -->
-    <button mat-icon-button matBadge=10 matBadgeColor="warn">
+    <button mat-icon-button class="cart-btn" [matBadge]="cartItemCount()" matBadgeColor="warn"
+      [matBadgeHidden]="cartItemCount() === 0" routerLink="/cart">
       <mat-icon>shopping_cart</mat-icon>
     </button>
 
