--- a/src/app/components/reusable_components/header-component/header-component.html
+++ b/src/app/components/reusable_components/header-component/header-component.html
@@ -26,7 +26,7 @@
 
     <!-- Cart -->
     <button mat-icon-button class="cart-btn" [matBadge]="cartItemCount()" matBadgeColor="warn"
-      [matBadgeHidden]="cartItemCount() === 0" routerLink="/cart">
+      [matBadgeHidden]="cartItemCount() === 0" routerLink="/shoppingCart">
       <mat-icon>shopping_cart</mat-icon>
     </button>
 
