--- a/src/app/components/page_components/shopping-cart-component/shopping-cart-component.html
+++ b/src/app/components/page_components/shopping-cart-component/shopping-cart-component.html
@@ -1,12 +1,20 @@
 <div class="app-container-wrapper">
     <div class="cart-container" *ngIf="cartItems().length; else emptyCart">
 
-        <table mat-table [dataSource]="cartItems()" class="mat-elevation-z2">
+        <table mat-table [dataSource]="cartItems()" class="app-mat-table mat-elevation-z2">
+
+            <!-- ROW NUMBER -->
+            <ng-container matColumnDef="index">
+                <th mat-header-cell *matHeaderCellDef>#</th>
+                <td mat-cell *matCellDef="let item; let i = index" data-label="#">
+                    {{ i + 1 }}
+                </td>
+            </ng-container>
 
             <!-- PRODUCT -->
             <ng-container matColumnDef="product">
                 <th mat-header-cell *matHeaderCellDef>Product</th>
-                <td mat-cell *matCellDef="let item" class="product-cell">
+                <td mat-cell *matCellDef="let item" class="product-cell" data-label="Product">
                     <img [src]="item.imageUrl" alt="product" />
                     <span>{{ item.name }}</span>
                 </td>
@@ -15,7 +23,7 @@
             <!-- UNIT PRICE -->
             <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef>Unit Price (Rs.)</th>
-                <td mat-cell *matCellDef="let item">
+                <td mat-cell *matCellDef="let item" data-label="Unit Price">
                     {{ item.unitPrice | number:'1.2-2' }}
                 </td>
             </ng-container>
@@ -23,8 +31,8 @@
             <!-- QUANTITY -->
             <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef>Quantity</th>
-                <td mat-cell *matCellDef="let item">
-                    <input matInput type="number" min="1" [max]="item.maxStock" [value]="item.quantity"
+                <td mat-cell *matCellDef="let item" data-label="Quantity">
+                    <input matInput type="number" class="qty-input" min="1" [max]="item.maxStock" [value]="item.quantity"
                         (change)="updateQty(item.productId, $any($event.target).valueAsNumber)" />
                 </td>
             </ng-container>
@@ -32,7 +40,7 @@
             <!-- SUB TOTAL -->
             <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef>Sub Total (Rs.)</th>
-                <td mat-cell *matCellDef="let item">
+                <td mat-cell *matCellDef="let item" data-label="Sub Total">
                     {{ item.subtotal | number:'1.2-2' }}
                 </td>
             </ng-container>
@@ -40,13 +48,14 @@
             <!-- ACTION -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Action</th>
-                <td mat-cell *matCellDef="let item">
+                <td mat-cell *matCellDef="let item" data-label="Action">
                     <button mat-icon-button color="warn" (click)="remove(item.productId)">
                         <mat-icon>delete</mat-icon>
                     </button>
                 </td>
             </ng-container>
 
+            <!-- HEADER & ROW DEFINITIONS -->
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
