login component is added

--- a/src/app/components/reusable_components/header-component/header-component.html
+++ b/src/app/components/reusable_components/header-component/header-component.html
@@ -33,7 +33,7 @@
     <!-- ACCOUNT -->
     <div class="account-wrapper">
       <!-- Not logged in -->
-      <button mat-icon-button>
+      <button mat-icon-button routerLink="/login">
         <mat-icon>account_circle</mat-icon>
       </button>
 
