--- a/src/app/components/reusable_components/header-component/header-component.html
+++ b/src/app/components/reusable_components/header-component/header-component.html
@@ -33,19 +33,20 @@
     <!-- ACCOUNT -->
     <div class="account-wrapper">
       <!-- Not logged in -->
-      <button mat-icon-button routerLink="/login">
+      <button *ngIf="!authSessionService.isLoggedIn()" mat-icon-button routerLink="/login">
         <mat-icon>account_circle</mat-icon>
       </button>
 
       <!-- Logged in -->
-      <button mat-icon-button [matMenuTriggerFor]="accountMenu" class="account-btn">
+      <button *ngIf="authSessionService.isLoggedIn()" mat-icon-button [matMenuTriggerFor]="accountMenu"
+        class="account-btn">
         <mat-icon>account_circle</mat-icon>
         <mat-icon class="dropdown-icon">arrow_drop_down</mat-icon>
       </button>
 
       <mat-menu #accountMenu="matMenu" class="account-menu">
         <div class="user-email">
-          test@gmail.com
+          {{ authSessionService.email() }}
         </div>
 
         <button mat-menu-item>
@@ -53,7 +54,7 @@
           Profile
         </button>
 
-        <button mat-menu-item>
+        <button mat-menu-item (click)="logout()">
           <mat-icon>logout</mat-icon>
           Logout
         </button>
