--- a/src/app/components/page_components/auth_components/login-component/login-component.html
+++ b/src/app/components/page_components/auth_components/login-component/login-component.html
@@ -1,4 +1,4 @@
-<div class="app-container-wrapper">
+<div class="app-element-wrapper">
     <mat-card class="auth-card">
 
         <h2 class="auth-title">Login</h2>
