--- a/src/app/components/page_components/auth_components/login-component/login-component.html
+++ b/src/app/components/page_components/auth_components/login-component/login-component.html
@@ -1,45 +1,34 @@
 <div class="app-element-wrapper">
-    <mat-card class="auth-card">
+  <mat-card class="auth-card">
 
-        <h2 class="auth-title">Login</h2>
+    <h2 class="auth-title">Login</h2>
 
-        <!-- EMAIL -->
-        <mat-form-field appearance="outline" class="full-width">
-            <mat-label>Email</mat-label>
-            <input matInput type="email" [value]="email()" (input)="email.set($any($event.target).value)"
-                autocomplete="email" required />
-        </mat-form-field>
+    <!-- EMAIL -->
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" [value]="email()" (input)="email.set($any($event.target).value)" autocomplete="email"
+        required />
+    </mat-form-field>
 
-        <!-- PASSWORD -->
-        <mat-form-field appearance="outline" class="full-width">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" [value]="password()" (input)="password.set($any($event.target).value)"
-                autocomplete="current-password" required />
-        </mat-form-field>
+    <!-- PASSWORD -->
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" [value]="password()" (input)="password.set($any($event.target).value)"
+        autocomplete="current-password" required />
+    </mat-form-field>
 
-        <!-- ERROR -->
-        <mat-error *ngIf="messageService.message()?.type === 'error'">
-            {{ messageService.message()?.text }}
-        </mat-error>
+    <!-- SUBMIT -->
+    <button mat-raised-button color="primary" class="full-width" (click)="login()"
+      [disabled]="!isFormValid() || loading()">
+      <mat-spinner *ngIf="loading()" diameter="18" class="btn-spinner"></mat-spinner>
+      <span *ngIf="!loading()">Login</span>
+    </button>
 
-        <!-- SUCCESS -->
-        <div class="success-msg" *ngIf="messageService.message()?.type === 'success'">
-            {{ messageService.message()?.text }}
-        </div>
+    <!-- SWITCH -->
+    <p class="auth-switch-link">
+      Don't have an account?
+      <a routerLink="/register">Register</a>
+    </p>
 
-        <!-- SUBMIT -->
-        <button mat-raised-button color="primary" class="full-width" (click)="login()"
-            [disabled]="!isFormValid() || loading()">
-            <mat-spinner *ngIf="loading()" diameter="18" class="btn-spinner"></mat-spinner>
-
-            <span *ngIf="!loading()">Login</span>
-        </button>
-
-        <!-- SWITCH -->
-        <p class="auth-switch-link">
-            Don't have an account?
-            <a routerLink="/register">Register</a>
-        </p>
-
-    </mat-card>
+  </mat-card>
 </div>
