dashboard is drafted

--- a/src/app/components/page_components/dashboard_components/base-dashboard-component/base-dashboard-component.html
+++ b/src/app/components/page_components/dashboard_components/base-dashboard-component/base-dashboard-component.html
@@ -1,1 +1,13 @@
-<p>base-dashboard-component works!</p>
+<div class="dashboard-container">
+    <!-- [Start - Sidebar] -->
+    <nav class="dashboard-sidenav">
+    </nav>
+    <!-- [End - Sidebar] -->
+
+    
+    <!-- [Start - main content (nav content)] -->
+    <div class="dashboard-content">
+        <router-outlet></router-outlet>
+    </div>
+    <!-- [End - main content (nav content)] -->
+</div>
