--- a/src/app/components/page_components/dashboard_components/base-dashboard-component/base-dashboard-component.html
+++ b/src/app/components/page_components/dashboard_components/base-dashboard-component/base-dashboard-component.html
@@ -1,10 +1,15 @@
 <div class="dashboard-container">
     <!-- [Start - Sidebar] -->
     <nav class="dashboard-sidenav">
+        <button *ngFor="let permission of navItemPermission" mat-button routerLink="{{permission.route}}"
+            routerLinkActive="active">
+            <mat-icon>{{permission.icon}}</mat-icon>
+            <span>{{permission.label}}</span>
+        </button>
     </nav>
     <!-- [End - Sidebar] -->
+     
 
-    
     <!-- [Start - main content (nav content)] -->
     <div class="dashboard-content">
         <router-outlet></router-outlet>
