--- a/src/app/components/reusable_components/dashboard_nav_component/dashboard_building_blocks/dashboard-table-component/dashboard-table-component.html
+++ b/src/app/components/reusable_components/dashboard_nav_component/dashboard_building_blocks/dashboard-table-component/dashboard-table-component.html
@@ -7,7 +7,7 @@
     </mat-form-field>
 
     <!-- TABLE -->
-    <table mat-table [dataSource]="data">
+    <table mat-table [dataSource]="data" class="app-mat-table mat-elevation-z2">
 
         <!-- ROW NUMBER -->
         <ng-container *ngIf="showRowNumber" matColumnDef="rowNumber">
