--- a/src/app/components/page_components/auth_components/login-component/login-component.html
+++ b/src/app/components/page_components/auth_components/login-component/login-component.html
@@ -3,28 +3,40 @@
 
     <h2 class="auth-title">Login</h2>
 
-    <!-- EMAIL -->
-    <mat-form-field appearance="outline" class="full-width">
-      <mat-label>Email</mat-label>
-      <input matInput type="email" [value]="email()" (input)="email.set($any($event.target).value)" autocomplete="email"
-        required />
-    </mat-form-field>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-    <!-- PASSWORD -->
-    <mat-form-field appearance="outline" class="full-width">
-      <mat-label>Password</mat-label>
-      <input matInput type="password" [value]="password()" (input)="password.set($any($event.target).value)"
-        autocomplete="current-password" required />
-    </mat-form-field>
+      <!-- INPUTS -->
+      <mat-form-field appearance="outline" class="auth-input">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" />
 
-    <!-- SUBMIT -->
-    <button mat-raised-button color="primary" class="full-width" (click)="login()"
-      [disabled]="!isFormValid() || loading()">
-      <mat-spinner *ngIf="loading()" diameter="18" class="btn-spinner"></mat-spinner>
-      <span *ngIf="!loading()">Login</span>
-    </button>
+        <mat-error *ngIf="emailCtrl.hasError('required') && (emailCtrl.touched || emailCtrl.dirty)">
+          Email is required
+        </mat-error>
 
-    <!-- SWITCH -->
+        <mat-error *ngIf="emailCtrl.hasError('email') && (emailCtrl.touched || emailCtrl.dirty)">
+          Enter a valid email
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="auth-input">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password" />
+
+        <mat-error *ngIf="passwordCtrl.hasError('required') && (passwordCtrl.touched || passwordCtrl.dirty)">
+          Password is required
+        </mat-error>
+      </mat-form-field>
+
+      <!-- BUTTON -->
+      <button mat-raised-button color="primary" type="submit" class="auth-submit-btn"
+        [disabled]="loading() || (submitted && form.invalid)">
+        Login
+      </button>
+
+    </form>
+
+    <!-- SWITCH LINK -->
     <p class="auth-switch-link">
       Don't have an account?
       <a routerLink="/register">Register</a>
