register password mismatch error is corrected

--- a/src/app/components/page_components/auth_components/register-component/register-component.html
+++ b/src/app/components/page_components/auth_components/register-component/register-component.html
@@ -39,7 +39,7 @@
                 </mat-error>
 
                 <mat-error
-                    *ngIf="form.hasError('passwordsMismatch') && (confirmPasswordCtrl.touched || confirmPasswordCtrl.dirty)">
+                    *ngIf="confirmPasswordCtrl.hasError('passwordsMismatch') && (confirmPasswordCtrl.touched || confirmPasswordCtrl.dirty)">
                     Passwords do not match
                 </mat-error>
             </mat-form-field>
