common dashboard style is added

--- a/src/app/components/page_components/dashboard_components/nav_components/brand-nav-component/brand-nav-component.scss
+++ b/src/app/components/page_components/dashboard_components/nav_components/brand-nav-component/brand-nav-component.scss
@@ -1,5 +1,1 @@
-.dashboard-container {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
+@use '../../../../../common_styles/elements/dashboard_style.scss'
